bugfix: finished disable contextmenu on iphone

--- a/client/assets/styles/main.css
+++ b/client/assets/styles/main.css
@@ -14,9 +14,12 @@ body{
   top: 10px;
   /*display:none;*/
 }
+.bt-burger-button.hidden { 
+  display: none; 
+}
 /* Color/shape of burger icon bars */
 .bm-burger-bars{
-    background:red;
+    background:grey;
 }
 /* Color/shape of burger icon bars on hover*/
 .bm-burger-bars-hover {background: #a90000;}
